<resources>
    <string name="app_name">E-commerce</string>
    <string name="cart">cart</string>
    <string name="rs_0000">Rs. 0000/-</string>
    <string name="purchase">PURCHASE</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="product_image">Product Image</string>
    <string name="product_name">Product Name</string>
    <string name="smartphone">Smartphone</string>
    <string name="computer">Computer</string>
    <string name="other_electronics">Other Electronics</string>
    <string name="all_products">All Products</string>
    <string name="cart_is_empty">Cart is Empty</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signUp">Sign Up</string>
    <string name="already_have_an_account_login">Already have an Account? Login</string>
    <string name="welcome">Welcome</string>
    <string name="you_are_logged_in">You are logged in</string>
    <string name="enter_your_details_to_place_order">Enter your details to place order</string>
    <string name="address_house_no_and_street_name">Address (House No and Street Name)</string>
    <string name="address_landmark">Address (Landmark)</string>
    <string name="city">City</string>
    <string name="area_pincode">Area Pincode</string>
    <string name="place_order">Place Order</string>
    <string name="payment_method_cash_on_delivery">Payment Method : Cash On Delivery</string>
    <string name="contact_number">Contact Number</string>
    <string name="proceed">Proceed</string>
    <string name="your_order_have_been_placed">Your order have been placed</string>
    <string name="logout">Logout</string>
    <string name="no_orders">You have not placed any orders yet</string>
    <string name="my_orders">My Orders</string>
    <string name="cancel_order">Cancel Order</string>
</resources>
